tests/diag/shell-amp.id
activate app/ish
echo a & echo b
